--- a/SwiftStock(Redo)/wwwroot/css/style.css
+++ b/SwiftStock(Redo)/wwwroot/css/style.css
@@ -283,9 +283,6 @@
   .top-1 {
     top: calc(var(--spacing) * 1);
   }
-  .top-2 {
-    top: calc(var(--spacing) * 2);
-  }
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
@@ -309,9 +306,6 @@
   }
   .right-1 {
     right: calc(var(--spacing) * 1);
-  }
-  .right-3 {
-    right: calc(var(--spacing) * 3);
   }
   .right-4 {
     right: calc(var(--spacing) * 4);
@@ -670,9 +664,6 @@
   .table-row {
     display: table-row;
   }
-  .aspect-square {
-    aspect-ratio: 1 / 1;
-  }
   .h-1\/2 {
     height: calc(1/2 * 100%);
   }
@@ -717,6 +708,9 @@
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-1\/3 {
+    width: calc(1/3 * 100%);
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
@@ -1378,12 +1372,6 @@
   .text-\[\#FFD700\] {
     color: #FFD700;
   }
-  .text-\[\#e0e0e0\] {
-    color: #e0e0e0;
-  }
-  .text-\[\#f5f5f5\] {
-    color: #f5f5f5;
-  }
   .text-black {
     color: var(--color-black);
   }
@@ -1407,6 +1395,9 @@
   }
   .text-red-500 {
     color: var(--color-red-500);
+  }
+  .text-red-600 {
+    color: var(--color-red-600);
   }
   .text-slate-200 {
     color: var(--color-slate-200);
@@ -1738,6 +1729,11 @@
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:grid-cols-3 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .md\:grid-cols-4 {
